# ai-skills

./: .gitignore  README.md
akamai_audit/: README.md  SKILL.md  main.py  pyproject.toml  requirements.txt
akamai_audit/src/akamai_audit/: __init__.py  agent.py  api.py  config.py  edgegrid_client.py  orchestrator.py  output.py
akamai_audit/src/akamai_audit/reports/: __init__.py  cloudlets.py  contracts.py  cpcodes.py  groups.py  origins.py  properties.py  property_behaviors.py  property_criteria.py  traffic.py
web-auditor/: README.md  SKILL.md
web-auditor/scripts/: generate_audit_deck.py  web_performance_audit_v2.py
