[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "akamai-audit-agent"
version = "0.1.0"
description = "Python Akamai audit agent migrated from Apps Script"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.32.0",
  "edgegrid-python>=1.3.1",
  "python-dateutil>=2.9.0",
  "openpyxl>=3.1.5",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
